# 3yu

./: .gitignore  README.md  devbox.json  pyproject.toml
docs/: 3yu.typ
examples/: fib.3yu  hello.3yu  sum.3yu  sum.dpc
stage1/phase1/: analyser.py  parser.py
stage1/phase2/: interpreter.py
threeyu/: __init__.py  backend.py  cli.py  frontend.py
