[tool.poetry]
name = "threeyu"
version = "0.0.1"
description = "a horrible esoteric language where everything is 3 segments wide"
authors = ["Mark Joshwel <mark@joshwel.co>"]
license = "Unlicense"
readme = "README.md"
include = ["README.md"]
packages = [
    { include = "threeyu" },
]

[tool.poetry.scripts]
3yu = "threeyu.cli:entry"

[tool.poetry.dependencies]
python = "^3.10"
ziglang = "^0.11.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
black = "^24.2.0"
isort = "^5.13.2"

[tool.black]
line-length = 90

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
